tests/paczka1/fuzzy1/55999136.err
Error in line 3: aa3slo S246 72,8
Error in line 8: aa3slo A430 83,4
Error in line 9: aa3slo A634 74,9
Error in line 11: WNC A430 48,2
Error in line 13: A430 S246 6,4
Error in line 15: 7hMQA1Ba71Q S911 62,5
